Create User Factory / Seeder, Create Admin Middleware, Setup php insights, Refactoring code / Code Styles, Create User Listing API
